--- a/tools/embedded-zookeeper/pom.xml
+++ b/tools/embedded-zookeeper/pom.xml
@@ -30,11 +30,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+<!--        <maven.compiler.source>1.8</maven.compiler.source>-->
+<!--        <maven.compiler.target>1.8</maven.compiler.target>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <zookeeper.version>3.8.4</zookeeper.version>
+        <zookeeper.version>3.8.3</zookeeper.version>
         <metrics.version>4.1.12.1</metrics.version>
         <snappy.version>1.1.10.5</snappy.version>
         <log4j2.version>2.20.0</log4j2.version>
