add consul unit

--- a/spi-samples-configcenter/pom.xml
+++ b/spi-samples-configcenter/pom.xml
@@ -30,6 +30,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>spi-samples-configcenter-etcd</module>
+        <module>spi-samples-configcenter-consul</module>
     </modules>
 
     <properties>
