--- a/samples-spi-serialization/pom.xml
+++ b/samples-spi-serialization/pom.xml
@@ -21,6 +21,7 @@
         <module>samples-spi-serialization-fst</module>
         <module>samples-spi-serialization-kryo</module>
         <module>samples-spi-serialization-protostuff</module>
+        <module>samples-spi-serialization-fury</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
