--- a/samples-spi-serialization/pom.xml
+++ b/samples-spi-serialization/pom.xml
@@ -24,6 +24,7 @@
         <module>samples-spi-serialization-fury</module>
         <module>samples-spi-serialization-jackson</module>
         <module>samples-spi-serialization-msgpack</module>
+        <module>samples-spi-serialization-native-hessian</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
