--- a/2-dubbo-spi-protocol-samples/samples-spi-protocol/samples-spi-protocol-rmi/pom.xml
+++ b/2-dubbo-spi-protocol-samples/samples-spi-protocol/samples-spi-protocol-rmi/pom.xml
@@ -7,6 +7,7 @@
         <groupId>org.apache.dubbo</groupId>
         <artifactId>samples-spi-protocol</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>samples-spi-protocol-rmi</artifactId>
