--- a/4-dubbo-spi-config-samples/samples-spi-configcenter/pom.xml
+++ b/4-dubbo-spi-config-samples/samples-spi-configcenter/pom.xml
@@ -23,6 +23,7 @@
         <groupId>org.apache.dubbo</groupId>
         <artifactId>dubbo-samples-spi</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <groupId>org.apache.dubbo</groupId>
