--- a/4-dubbo-spi-config-samples/samples-spi-configcenter/samples-spi-configcenter-consul/pom.xml
+++ b/4-dubbo-spi-config-samples/samples-spi-configcenter/samples-spi-configcenter-consul/pom.xml
@@ -23,6 +23,7 @@
         <groupId>org.apache.dubbo</groupId>
         <artifactId>samples-spi-configcenter</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>samples-spi-configcenter-consul</artifactId>
