--- a/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-gson/pom.xml
+++ b/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-gson/pom.xml
@@ -23,6 +23,7 @@
         <groupId>org.apache.dubbo</groupId>
         <artifactId>samples-spi-serialization</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>samples-spi-serialization-gson</artifactId>
