--- a/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-native-hessian/pom.xml
+++ b/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-native-hessian/pom.xml
@@ -21,6 +21,7 @@
         <groupId>org.apache.dubbo</groupId>
         <artifactId>samples-spi-serialization</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
