--- a/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-protobuf/pom.xml
+++ b/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-protobuf/pom.xml
@@ -25,6 +25,7 @@
         <groupId>org.apache.dubbo</groupId>
         <artifactId>samples-spi-serialization</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <packaging>pom</packaging>
 
