--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 
     <modules>
         <module>tools</module>
+        <module>6-dubbo-spi-cluster-samples/samples-spi-cluster-broadcast1</module>
         <module>9-dubbo-spi-serialize-samples/samples-spi-serialization</module>
         <module>4-dubbo-spi-config-samples/samples-spi-configcenter</module>
         <module>2-dubbo-spi-protocol-samples/samples-spi-protocol</module>
