feat: add spi-protocol-rest-samples

--- a/2-dubbo-spi-protocol-samples/samples-spi-protocol/pom.xml
+++ b/2-dubbo-spi-protocol-samples/samples-spi-protocol/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>samples-spi-protocol-http</module>
         <module>samples-spi-protocol-rmi</module>
+        <module>samples-spi-protocol-rest</module>
     </modules>
 
     <properties>
