--- a/2-dubbo-spi-protocol-samples/samples-spi-protocol/samples-spi-protocol-rest/pom.xml
+++ b/2-dubbo-spi-protocol-samples/samples-spi-protocol/samples-spi-protocol-rest/pom.xml
@@ -140,6 +140,13 @@
             <version>2.1.1</version>
         </dependency>
 
+        <!-- Netty dependencies -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.92.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
