--- a/2-dubbo-spi-protocol-samples/samples-spi-protocol/samples-spi-protocol-rest/pom.xml
+++ b/2-dubbo-spi-protocol-samples/samples-spi-protocol/samples-spi-protocol-rest/pom.xml
@@ -103,6 +103,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.dubbo.extensions</groupId>
             <artifactId>dubbo-rpc-rest</artifactId>
             <version>3.3.0</version>
@@ -146,13 +151,6 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.92.Final</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
-        </dependency>
-
 
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
