--- a/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-native-hessian/case-versions.conf
+++ b/9-dubbo-spi-serialize-samples/samples-spi-serialization/samples-spi-serialization-native-hessian/case-versions.conf
@@ -20,7 +20,7 @@
 # Supported component versions of the test case
 
 # Spring app
-dubbo.version= 3.2*
+dubbo.version= 3.3.*
 spring.version=4.*, 5.*
 java.version= [>= 8]
 # compiler.version=0.0.*, 3.*
