--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <spi.version>3.3.0</spi.version>
-        <dubbo.version>3.3.2</dubbo.version>
+        <dubbo.version>3.3.0-beta.2</dubbo.version>
         <spring.version>4.3.30.RELEASE</spring.version>
         <log4j2.version>2.17.1</log4j2.version>
         <junit.version>4.13.1</junit.version>
